fixed dynamic logo spacing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,12 +6,15 @@
     height: 70px;
     background-color: $blue-color;
 
-    #logo {
-      display: flex;
-      width: 70px;
-      position: absolute;
-      left: 25px;
+    #container-logo {
+      width: 322px;
+      position: relative;
       top: 25px;
+      margin: 0 auto;
+
+      #logo {
+        width: 70px;
+      }
     }
   }
 }
@@ -19,8 +22,8 @@
 @media only screen and (min-width: 1920px) {
   #App {
     #container-header {
-      #logo {
-        left: 328px;
+      #container-logo {
+        width: 1284px;
       }
     }
   }
